--- a/cn/职位.md
+++ b/cn/职位.md
@@ -103,8 +103,7 @@
 
 7、具备高度责任心，开朗乐观，有团队协作精神，愿意接受挑战。
 
-
 ---
-简历投递方式：contact@dforce.network
+简历投递方式：contacts@dforce.network
 
 dForce官网：https://dforce.network/ 
