Update recruitment details.

--- a/cn/职位.md
+++ b/cn/职位.md
@@ -30,80 +30,112 @@
 7、 职业规划明确，适应分布式办公和工作压力，沟通能力和团队协作能力良好。
 
 
-### 高级Web前端工程师
-**岗位职责：**
-
-1、 负责产品前端的架构设计和开发工作；
-
-2、 指导并参与产品的前端性能优化、故障排查和解决、安全加固等工作；
-
-3、 在设计系统和项目的架构、承担关键任务工作的同时，能够指导工程师，组织技术分享，促进团队成员进步；
-
-**岗位要求：**
-
-1、 全日制统招本科及以上学历，至少5年的互联网前端产品开发经验；
-
-2、 具有扎实的计算机科学功底，扎实的编程基础和数据结构算法基础；
-
-3、 精通HTML(5)/CSS(3)/JavaScript等前端技术，能轻松写出符合W3C标准、兼容主流浏览器的代码；
-
-4、 精通至少一种Web框架(React\VUE等)，对JS语言掌握较深；
-
-5、 具有严谨的软件工程项目的规范、流程和意识，熟练使用Github管理代码和团队协作开发；
-
-6、 习惯查阅英文资料，如各类开发文档，技术文章等；
-
-
-**具备以下者优先：**
-
-1、有React开发互联网类产品经验；
-
-2、具有区块链行业从业经验；
-
-3、具有知名互联网企业工作经验；
-
-4、有成功指导初级工程师的经验。
-
-
-### 运营经理（市场活动方向）
+### 区块链架构师
 
 **岗位职责：**
 
-1、负责dForce产品线上线下营销活动的策略、创意构思，联合各部门资源，保证活动有效的落地执行，达成有效的活动转化率指标；
+1、区块链金融产品架构设计与实现
 
-2、擅于结合热点事件策划营销活动、推广方案；
+- 根据产品需求（基于以太坊的金融产品），设计架构、功能分解，包括技术选型、架构搭建、安全风险识别、工作量评估，质量、进度把控等。
 
-3、通过进行市场调研和客户分析，依据dForce产品规划和阶段策略，结合现有资源和条件，拟定季度和月度营销计划；
+- 研究以太坊DeFi协议，Compound.finance/MakerDao/AAVE等，研究以太坊安全漏洞披露，协议审计报告，对安全漏洞、产品风险做出预警。
 
-4、关注市场上活动创意、数据、用户反馈，乐于研究竞品的营销方式，收集相关信息和数据，并及时做出推广策略的调整；
+2、项目研发管理
 
-5、对活动开展数据监控和精确分析，通过反馈跟踪有针对性地调整推广策略，不断优化营销活动方案；
+- 根据项目发展计划，规划研发计划，细分阶段任务，和产品经理配合，保证项目保质、按时、高效完成。
 
-6、负责撰写品牌推广和产品营销文案；
+- 对项目技术进行风控管理，对可能存在的漏洞、隐患和运营缺陷及时发现、及时避免、及时解决。
 
-7、负责外部媒体的关系开拓和维护；
+3、技术团队管理
 
-8、与运营、商务、产品等部门协作，高度了解业务。
+- 根据项目需求，规划并配置核心技术团队。
 
+- 分配研发任务，跟踪技术团队各岗位研发进度，对团队成员进行绩效考核等。
 
 **岗位要求：**
 
+1、项目经验
 
-1、本科（及以上）学历，优秀的英文听、说、读、写能力；
+- 具备以太坊智能合约应用（金融产品为佳）研发经验，有完整项目案例。
 
-2、2年以上区块链/互联网运营经验，熟悉B端和C端业务的营销模式；
+- 具备三年以上，5人及以上技术研发团队管理经验。
 
-3、较强的获客拓展能力和营销策划能力；
+2、研发能力
 
-4、有一定的话题策划能力，善于深度挖掘行业热点；
+- 五年以上架构师经验，精通底层架构，有较强的底层和系统构架能力。
 
-5、优秀的文案编辑、组织、整理和撰写能力；
+- 五年以上后端主程经验，精通区块链所在领域所需的核心源码及其他后端相关技术。
 
-6、对区块链行业感兴趣，有较好的学习能力和沟通能力，思维敏捷，思路开阔；
+- 区块链、金融行业从业者优先；
 
-7、具备高度责任心，开朗乐观，有团队协作精神，愿意接受挑战。
+- 具备以太坊金融产品开发经验者优先；
+
+3、综合素质
+
+- 有较强的沟通和抗压能力。
+
+- 有良好的团队精神。
+
+
+### 区块链测试工程师
+
+**岗位职责：**
+
+1、负责公司产品测试工作，分析需求、设计测试用例，构建测试环境及框架、编写测试脚本等；
+ 
+2、对被测软件进行测试方案评估和项目整体跟进，并协助定位排查问题； 
+
+3、保证被测软件的质量，并通过完善测试流程和方法创新，努力提升研发的质量和效率；
+ 
+4、调研并引入新的自动化技术，提高测试效率。 
+
+**岗位要求:**
+
+1、两年以上互联网行业工作经验，计算机相关学科本科及以上学历； 
+
+2、有区块链或金融产品测试经验；
+
+3、熟练使用一种脚本编程语言，如JS、Python，有编写自动化测试程序经验，熟悉Linux环境基本操作；
+
+4、具备自动化测试和性能测试的设计和应用经验，参与过大型系统的自动化和性能测试，并对自动化和性能测试有全面的理解优先；
+
+5、具有良好的逻辑思维能力，工作认真负责、积极主动；有良好的团队合作能力，善于沟通；
+
+
+### 区块链运维工程师
+
+**任职要求：**
+
+1、熟练使用linux系统
+
+2、熟悉shell、或python，有python开发经验优先
+
+3、三年以上工作经验
+
+4、有一定的英文文档阅读能力
+
+5、熟悉区块链技术，了解POS共识机制
+
+6、有POS节点维护经验优先
+
+7、熟悉nginx、mongodb，有dapp维护经验优先
+
+**学历要求：**
+
+- 全日制大专需工作经验3年以上
+- 全日制本科需工作经验2年以上
+
+**岗位职责：**
+
+1、负责POS节点搭建、日常维护
+
+2、负责Dapp服务器可用性、安全性维护工作
+
+3、协助研发，完成基础工具开发
+
+
 
 ---
-简历投递方式：contacts@dforce.network
+简历投递方式：snow@dforce.network
 
 dForce官网：https://dforce.network/ 
